# Rendering-Starter-Template-main

./: CMakeLists.txt
opengl-framework/src/: RenderTarget.cpp  RenderTarget.hpp  Shader.cpp  make_absolute_path.cpp
res/: fragment.glsl  fragmentOBJ.glsl  fragmentScreen.glsl  post_process_fragment.glsl  post_process_vertex.glsl  vertex.glsl  vertexScreen.glsl
src/: main.cpp
